templates/require-resources-limits/require-resources-limits.yaml
{{- if .Values.policies.requireResourceLimits.enabled }}
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources-limits
  annotations:
    policies.kyverno.io/severity: {{ .Values.policies.requireResourceLimits.severity }}
    policies.kyverno.io/description: >-
      Disallow Pods which do not have limits for CPU and memory
      To Enforce resources usage control.
spec:
  validationFailureAction: {{ .Values.policies.requireResourceLimits.action }}
  background: true
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - Pod
      exclude:
        resources:
          namespaces:
            - argocd
            - kube-system
            - kyverno-policies
      validate:
        message: "CPU and memory limits are required"
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
{{ end }}
